# python-intermediate-inflammation

./: .gitignore  LICENSE.md  README.md  inflammation-analysis.py  pyproject.toml  requirements.txt  setup.py  test.ipynb
.github/workflows/: main.yml
inflammation/: models.py  views.py
tests/: test_models.py  test_patient.py
